# offaxis

./: .gitignore  README.md  WORK_CHUNKS.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: launch_offaxis.command  reset_offaxis.command
src/offaxis/: __init__.py  app.py  projection.py
tests/: test_projection.py
