[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offaxis"
version = "0.1.0"
description = "Off-axis multi-screen projection prototype using a device camera"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OffAxis Contributors" }
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.8"
]

[project.scripts]
offaxis = "offaxis.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
